--- a/index.html
+++ b/index.html
@@ -3,12 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Web-developer page</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <p>This is me</p>
-  <div class="box"></div>
+    <div class="head-bar">
+      <div>Works</div>
+      <div>Blog</div>
+      <div>Contact</div>
+    </div>
+  
+    <div class="card">
+  
+      <div class="name">
+        <p class="hello">Привет, меня зовут Дамира, <br> я начинающий веб-разработчик</p>
+        <p class="text-card">
+          Я училась в университете Нархоз, специальность учет и аудит. Мне моя <br>
+          профессия не нравилась. Поэтому я ушла в финансы и пробовала себя в <br>
+          фин.аналитике. После стала c&b специалистом. И в этом году решила <br>
+          следовать за мечтой и пришла к программированию.
+        </p>
+  
+        <div class="resume-card">
+          Download Resume
+        </div>
+  
+      </div>
+  
+      
+      <div class="profile-picture">
+        <img class="myphoto" src="myphoto.jpg">
+      </div>
+    </div>
   
 </body>
 </html>
