--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   
       
       <div class="profile-picture">
-        <img class="myphoto" src="myphoto.jpg">
+        <img class="myphoto" src="photo.jpg">
       </div>
     </div>
   
